--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: n4d-cups
 Section: admin
 Priority: optional
 Maintainer: Equipo LliureX <lliurex@gva.es>
-Uploaders: Angel Berlanas Vicente <lliurex_devel2@edu.gva.es>
-Build-Depends: debhelper (>= 8.0.0), n4d-dev
-Standards-Version: 3.9.5
+Uploaders: Equipo LliureX <lliurex@gva.es>
+Build-Depends: debhelper (>= 10), n4d-dev
+Standards-Version: 4.1.2
 
 Package: n4d-cups
 Depends:  ${shlibs:Depends}, ${misc:Depends}, n4d
